other/restrict-ai-network-egress/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: restrict-ai-network-egress
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../restrict-ai-network-egress.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: good-pod.yaml
  - name: step-03
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
          file: bad-pod-host-network.yaml
  - name: step-04
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
          file: bad-pod-no-network-label.yaml
